syntax = "proto3";

import "google/protobuf/wrappers.proto";
import "Messages/CommonTypes.proto";

option csharp_namespace = "GrpcServer.Api.Protos.Messages.TypeTests";

package grpc_server.api.protos.messages.type_tests;

message ShortTestDto {
    int32 short_field = 1;
    repeated int32 short_field_collection = 2;
    google.protobuf.Int32Value short_field_nullable = 3;
    ListOfInt32 short_field_nullable_collection = 4;
}
